--- a/views/chatroom.html
+++ b/views/chatroom.html
@@ -18,14 +18,14 @@
     <main class="chat-main">
       <div class="chat-sidebar">
         <h3><i class="fas fa-comments"></i> Room Name:</h3>
-        <h2 id="room-name">JavaScript</h2>
+        <h2 id="room-name">The Forest</h2>
         <h3><i class="fas fa-users"></i> Users</h3>
         <ul id="users">
-          <li>Brad</li>
-          <li>John</li>
-          <li>Mary</li>
-          <li>Paul</li>
-          <li>Mike</li>
+          <li>gerard garnaaltje</li>
+          <li>waylon wolf</li>
+          <li>clarize cat</li>
+          <li>dylan dingo</li>
+          <li>peter paw</li>
         </ul>
       </div>
       <div class="chat-messages">
