--- a/views/chatroom.html
+++ b/views/chatroom.html
@@ -6,28 +6,21 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css" integrity="sha256-mmgLkCYLUQbXn0B1SRqzHar6dCnv9oZFPEC1g1cwlkk=" crossorigin="anonymous" />
 	<link rel="stylesheet" href="css/style.css" />
   
-  <title>ChatCord App</title>
+  <title>Beasties</title>
 </head>
 <body>
-  <img id="bgimage" class="bgimage" src="https://live.staticflickr.com/65535/50751313053_b9dc38d2fe_b.jpg">
+  <h1><i class="fas fa-comments"></i> Room Name:</h1>
+  <h2 id="room-name">The Forest</h2>
+
+<ul id="users" class="userimages">
+
+</ul>
+
+  <img id="bgimage" class="bgimage" src="https://64.media.tumblr.com/0fae276209fe9b7007ec7dbc3a0b3f5f/c3e15a53b8d569b6-7d/s1280x1920/7725abfd18b61bdeaa05c91d5d0e610257d233d7.gif">
   <div class="chat-container">
-    <header class="chat-header">
-      <h1><i class="fas fa-smile"></i> ChatCord</h1>
-      <a href="index.html" class="btn">Leave Room</a>
-    </header>
+
     <main class="chat-main">
-      <div class="chat-sidebar">
-        <h3><i class="fas fa-comments"></i> Room Name:</h3>
-        <h2 id="room-name">The Forest</h2>
-        <h3><i class="fas fa-users"></i> Users</h3>
-        <ul id="users">
-          <li>gerard garnaaltje</li>
-          <li>waylon wolf</li>
-          <li>clarize cat</li>
-          <li>dylan dingo</li>
-          <li>peter paw</li>
-        </ul>
-      </div>
+  
       <div class="chat-messages">
 			
       </div>
@@ -41,7 +34,7 @@
           required
           autocomplete="off"
         />
-        <button class="btn"><i class="fas fa-paper-plane"></i> Send</button>
+        <button class="btn">Send</button>
       </form>
     </div>
   </div>
