--- a/views/index.html
+++ b/views/index.html
@@ -35,8 +35,8 @@
 					<div class="form-control">
 						<label for="room">Where will you chill?</label>
 						<select name="room" id="room">
-							<option value="Theforest">The forest</option>
-							<option value="Python">Chill lake</option>
+							<option value="The forest">The forest</option>
+							<option value="Chill Lake">Chill lake</option>
 							<option value="Nsfw">Not safe for woods</option>
 						
 						</select>
