--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,10 +1,10 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
 
 :root {
-	--dark-color-a: #298927;
-	--dark-color-b: #53af61;
+	--dark-color-a: #892727b5;
+	--dark-color-b: #53af618d;
 	--light-color: #151414;
-	--success-color: #5cb85c;
+	--success-color: #5cb85ca8;
 	--error-color: #d9534f;
 }
 
@@ -17,7 +17,7 @@
 body {
 	font-family: 'Roboto', sans-serif;
 	font-size: 16px;
-	
+	overflow: hidden; /* Hide scrollbars */
 
 }
 
@@ -33,6 +33,44 @@ body {
 ul {
 	list-style: none;
 }
+ul.userimages {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+align-items: center;
+}
+ul.userimages li {
+	text-align: center;
+	color: white;
+padding: 1em;
+
+}
+ul.userimages li p {
+	font-size: 1.5em;
+	font-weight: bold;
+	
+}
+ul.userimages li img {
+width: 7em;
+height: 7em;
+border-radius: 50%;
+border: 3px solid rgb(255, 255, 255);
+}
+ul.userimages li:last-of-type {
+	padding-bottom: 3em;
+}
+.leavebtn {
+	cursor: pointer;
+	padding: 1em 2em;
+	background: rgba(180, 20, 20, 0.63);
+	color: white;
+	border: 2px solid rgb(106, 3, 3);
+	font-weight: bold;
+
+	border-radius: 0.3em;
+	font-size: 20px;
+
+}
 
 a {
 	text-decoration: none;
@@ -41,8 +79,8 @@ a {
 .btn {
 	cursor: pointer;
 	padding: 5px 15px;
-	background: lightblue;
-	color: var(--dark-color-a);
+	background: rgb(50, 157, 31);
+	color: black;
 	border: 0;
 	font-size: 17px;
 }
@@ -50,8 +88,12 @@ a {
 /* Chat Page */
 
 .chat-container {
-	max-width: 1100px;
-	background: #fff;
+	border: 2px solid rgb(0, 0, 0);
+	border-radius: 1em;
+	width: 1100px;
+	max-width: 100%;
+	
+	background: #00000095;
 	margin: 30px auto;
 	overflow: hidden;
 }
@@ -69,41 +111,28 @@ a {
 
 .chat-main {
 	display: grid;
-	grid-template-columns: 1fr 3fr;
+	grid-template-columns:  3fr 1fr;
 }
 
-.chat-sidebar {
-	background: var(--dark-color-b);
-	color: #fff;
-	padding: 20px 20px 60px;
-	overflow-y: scroll;
-}
 
-.chat-sidebar h2 {
-	font-size: 20px;
-	background: rgba(0, 0, 0, 0.1);
-	padding: 10px;
-	margin-bottom: 20px;
-}
 
-.chat-sidebar h3 {
-	margin-bottom: 15px;
-}
 
-.chat-sidebar ul li {
-	padding: 10px 0;
-}
+
+
 
 .chat-messages {
 	padding: 30px;
 	max-height: 500px;
 	overflow-y: scroll;
 }
+::-webkit-scrollbar {
+	width: 10px;
+  }
 
 .chat-messages .message {
 	padding: 10px;
 	margin-bottom: 15px;
-	background-color: lightblue;
+	background-color: rgb(220, 220, 220);
 	border-radius: 5px;
 	overflow-wrap: break-word;
 }
@@ -111,17 +140,17 @@ a {
 .chat-messages .message .meta {
 	font-size: 15px;
 	font-weight: bold;
-	color: var(--dark-color-b);
+	color: black;
 	opacity: 0.7;
 	margin-bottom: 7px;
 }
 
 .chat-messages .message .meta span {
-	color: #777;
+	color: #7d87d2;
 }
 
 .chat-form-container {
-	padding: 20px 30px;
+	padding: 30px 310px;
 	background-color: var(--dark-color-a);
 }
 
