--- a/views/chatroom.html
+++ b/views/chatroom.html
@@ -9,14 +9,14 @@
   <title>Beasties</title>
 </head>
 <body>
-  <h1><i class="fas fa-comments"></i> Room Name:</h1>
+  <section class="roomname">
+  <h1>You are now at the</h1>
   <h2 id="room-name">The Forest</h2>
-
+</section>
 <ul id="users" class="userimages">
-
 </ul>
 
-  <img id="bgimage" class="bgimage" src="https://64.media.tumblr.com/0fae276209fe9b7007ec7dbc3a0b3f5f/c3e15a53b8d569b6-7d/s1280x1920/7725abfd18b61bdeaa05c91d5d0e610257d233d7.gif">
+  <img id="bgimage" class="bgimage" src="https://cdna.artstation.com/p/assets/images/images/021/732/412/original/lida-cosgrove-lcosgrove-campfire-final-full.gif?1572759240">
   <div class="chat-container">
 
     <main class="chat-main">
@@ -24,6 +24,7 @@
       <div class="chat-messages">
 			
       </div>
+    </div>
     </main>
     <div class="chat-form-container">
       <form id="chat-form">
@@ -36,7 +37,7 @@
         />
         <button class="btn">Send</button>
       </form>
-    </div>
+
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.11.1/qs.min.js" integrity="sha512-5Zv/hNtOKSkeScnIYOqGjng82gQSHsCoyqq9TgrJLgYa032cUYWH4kF1ayS8Gz1Jfge7e8MaBF6AeEvoQ92v8w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="/socket.io/socket.io.js"></script>
