--- a/views/index.html
+++ b/views/index.html
@@ -41,10 +41,21 @@
 						
 						</select>
 					</div>
-					<button type="submit" class="btn">Join Realm</button>
+					<div class="beast">
+						<label for="beast">Which animal are you?</label>
+						<select name="beast" id="beast">
+							<option value="bear">Bear</option>
+							<option value="dog">Dog</option>
+							<option value="cat">Cat</option>
+							<option value="deer">Deer</option>
+							<option value="wizard">Wizard</option>
+						
+						</select>
+					</div>
+					<button type="submit" class="btn"><p>Join Realm</p></button>
 				</form>
 			</main>
 		</div>
-		<img id="bgimage" class="bgimage" src="https://live.staticflickr.com/65535/50751313053_b9dc38d2fe_b.jpg">
+		<img id="bgimage" class="bgimage" src="https://i.redd.it/dxk8nhgtdjpa1.gif">
 	</body>
 </html>
