--- a/public/css/style.css
+++ b/public/css/style.css
@@ -27,15 +27,18 @@ body {
 	overflow: hidden; /* Hide scrollbars */
 
 }
-
+h1 {
+	font-weight: lighter;
+	font-size: 6em;
+}
 section.roomname h1, h2 {
 	text-align: center;
 	color: white;
-	font-weight: lighter;
+	font-weight: 10;
 	filter: drop-shadow(0px 0px 20px #0ba6ff6d);
 }
 section.roomname h2 {
-	font-size: 7em;
+	font-size: 6em;
 }
 .bgimage {
 	position:absolute;
@@ -111,7 +114,7 @@ a {
 	border-radius: 1em;
 	width: 1100px;
 	max-width: 100%;
-	
+	height: 45vh;
 	background: #00000095;
 	margin: 30px auto;
 	overflow: hidden;
@@ -145,12 +148,16 @@ a {
 .chat-messages {
 	padding: 30px;
 	min-height: 400px;
-	max-height: 400px;
+	max-height: 45vh;
 	overflow-y: scroll;
 	color: rgb(9, 112, 0);
 	font-weight: bold;
 	font-family: Arial, Helvetica, sans-serif;
 	
+}
+.chat-messages img {
+	width: auto;
+	height: 12em;
 }
 ::-webkit-scrollbar {
 	width: 10px;
@@ -177,7 +184,7 @@ a {
 }
 
 .message {
-	color: rgb(0, 205, 10);
+	color: rgb(0, 143, 7);
 }
 .message.me {
 	color: red;
@@ -212,30 +219,32 @@ margin-right: 1em;
 
 /* Join Page */
 .join-container {
-	max-width: 500px;
+	max-width: 800px;
 	margin: 80px auto;
 	color: #fff;
+	
 }
 
 .join-header {
 	text-align: center;
-	padding: 20px;
-	background: var(--dark-color-a);
-	border-top-left-radius: 5px;
-	border-top-right-radius: 5px;
+	padding: 50px;
+	background: rgba(0, 0, 0, 0.55);
+	border-top-left-radius: 10px;
+	border-top-right-radius: 10px;
+	margin-bottom: 3em;
 }
 
 .join-main {
-	padding: 30px 40px;
-	background: var(--dark-color-b);
+	padding: 10% 10%;
+	background: rgba(130, 22, 22, 0.63);
+	
 }
 
-.join-main p {
-	margin-bottom: 20px;
-}
+
 
 .join-main .form-control {
-	margin-bottom: 20px;
+	margin-bottom: 30px;
+
 }
 
 .join-main label {
@@ -245,21 +254,41 @@ margin-right: 1em;
 
 .join-main input[type='text'] {
 	font-size: 16px;
-	padding: 5px;
+
 	height: 40px;
 	width: 100%;
+	border:none;
+	border-radius: 0.5em;
+	padding: 5%;
+	font-weight: bold;
 }
 
 .join-main select {
 	font-size: 16px;
-	padding: 5px;
+
 	height: 40px;
 	width: 100%;
+	border:none;
+	border-radius: 0.5em;
+	padding-left:5%;
+	font-weight: bold;
 }
 
 .join-main .btn {
-	margin-top: 20px;
-	width: 100%;
+padding: 1em;
+	margin-top: 4em;
+	width: 80%;
+	margin-left: 10%;
+
+}
+.join-main .btn:hover {
+	background-color: rgb(0, 216, 0);
+	transform: scale(.98);
+}
+.join-main .btn p {
+	filter: drop-shadow(5px 5px 0px rgba(0, 0, 0, 0.156));
+	font-size: 2em;
+	color: white;
 }
 
 @media (max-width: 700px) {
@@ -271,3 +300,11 @@ margin-right: 1em;
 		display: none;
 	}
 }
+
+img#catbutton {
+	width: 3em;
+	height:3em;
+	background-color: none;
+	background: none;
+}
+
